osha.theme Changelog
====================

1.3.17 (unreleased)
-------------------

- Overriding text-only view for documents in Collage for the social media section #1063 (thomasw)


1.3.16 (2010-05-06)
-------------------

- fixed height fallback in image portlet. Now a flash portlet can be 100% width, fixes #1037 (pilz)
- Created a Publications portlet, requested in #627 - it is identical to the Practical
  Solutions portlet, except that it only shows publications (thomasw)
- make OSH content switcher more robust in case of stale catalog entries (thomasw)


1.3.15 (2010-05-02)
-------------------

- Fixed link replacer which appends the sourceid tag to also respect urls with parameters fixes #1120 (pilz)


1.3.14 (2010-04-28)
-------------------

- fixed html bug


1.3.13 (2010-04-28)
-------------------

- hardcoded image width for news items in Collage to 100 (pilz)


1.3.12 (2010-04-27)
-------------------

- updated link in worklist form to point to new BIRT reports (pilz)


1.3.11 (2010-04-18)
-------------------

- Removing the eu FOP drop down list, this is being replaced by a link
  to 'National Focal Points' from the main navigation which will lead
  to /oshnetwork/focal-points #960 (deroiste)


1.3.10 (2010-04-05)
-------------------

- Nothing changed yet.


1.3.9 (2010-03-28)
------------------

- quick n dirty solution for #627: a new viewlet is registered that
  displays the contents of a doc called inline_content_viewlet below the
  title on objects with the marker i-face IInlineContentViewlet (thomasw)

1.3.8 (2010-03-16)
------------------

- Hiding the breadcrumbs for the FOP section #611 (deroiste)
- Added OSH_Link-to-Provider (and vice versa) switcher, #619 (thomasw)


1.3.7 (2010-03-07)
------------------

- Changed Napo logofooter to point inrs.fr to french version instead of english (part of #826) (pilz)
- Practical Solution portlet: Include Language Neutral results when
  "en" is selected. #766 (deroiste)