@@ -96,7 +96,9 @@
                 </p>
 
             <!-- Navigation -->
-            <!--div metal:use-macro="here/batch_macros/macros/navigation" /-->
+            <span tal:condition="python:template.getId()=='teaser-archive-view'">
+                <div metal:use-macro="here/batch_macros/macros/navigation" />
+            </span>
 
         </tal:topiccontents>
         </metal:listingmacro>
