@@ -5,6 +5,8 @@ osha.theme Changelog
 -------------------
 
 - Overriding text-only view for documents in Collage for the social media section #1063 (thomasw)
+- Re-enabled the commented batching in the teaser-view template, but only for the
+  archive view #1245 (thomasw)
 
 
 1.3.16 (2010-05-06)
